<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="30dip"
    android:orientation="horizontal">
    
   <LinearLayout 
       android:orientation="vertical"
       android:layout_height="wrap_content"
       android:layout_width="fill_parent"
       android:layout_gravity="center"
       >
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="24.5sp"
        android:gravity="center" />
    
    <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/continue_button"
        android:text="@string/continue_label"  />
    
    <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_button"
        android:text="@string/new_game_label"/>
    
    <Button 
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:id="@+id/about_button"
       android:text="@string/about_label"/>
    
    <Button 
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:id="@+id/exit_button"
       android:text="@string/exit_label" />
    
       
       
   </LinearLayout>
    
</LinearLayout>

